grafana analysis modules added to graf_analysis/

--- a/configure.ac
+++ b/configure.ac
@@ -14,6 +14,7 @@ OPTION_DOC
 
 OPTION_DEFAULT_DISABLE([debug], [ENABLE_DEBUG])
 OPTION_DEFAULT_ENABLE([python], [ENABLE_PYTHON])
+OPTION_DEFAULT_ENABLE([grafana], [ENABLE_GRAFANA])
 OPTION_WITH_OR_BUILD([sos],[../sos],[sos/src sos/include ods/src ods/include])
 
 AM_PATH_PYTHON(,,[:])
@@ -32,6 +33,7 @@ AC_SUBST(distdir)
 AC_CONFIG_FILES([
 		Makefile
 		numsos/Makefile
+		graf_analysis/Makefile
 ])
 
 AC_OUTPUT
