Analysis module(s) updates and bug fixes
add compMinMeanMaxRate analysis module
group idle nodes by component_id in rankMembyJob
fix for ios/bps lustreData calc

--- a/graf_analysis/Makefile.am
+++ b/graf_analysis/Makefile.am
@@ -6,8 +6,8 @@ PY_INCLUDES = -I$(srcdir)/../include \
 pkggrafanadir = ${pythondir}/graf_analysis
 pkggrafana_PYTHON = __init__.py \
 		compMinMeanMax.py \
+		compMinMeanMaxRate.py \
 		grafanaAnalysis.py \
 		grafanaFormatter.py \
 		rankMemByJob.py \
 		lustreData.py
-
