grafanaFormatter returns json formatted strings for grafana analysis modules
meanMetricRate calculates mean rate for specified metrics across jobs and components

--- a/graf_analysis/Makefile.am
+++ b/graf_analysis/Makefile.am
@@ -5,9 +5,10 @@ PY_INCLUDES = -I$(srcdir)/../include \
 
 pkggrafanadir = ${pythondir}/graf_analysis
 pkggrafana_PYTHON = __init__.py \
-		compMinMeanMax.py \
-		compMinMeanMaxRate.py \
 		grafanaAnalysis.py \
 		grafanaFormatter.py \
+		meanMetricRate.py \
+		compMinMeanMax.py \
+		compMinMeanMaxRate.py \
 		rankMemByJob.py \
 		lustreData.py
