new analysis module metricBinRate - calculate's rate of metric(s) with binned response
error handling for lustreData module
remove deprecated compMinMeanMaxRate module

--- a/graf_analysis/Makefile.am
+++ b/graf_analysis/Makefile.am
@@ -7,8 +7,9 @@ pkggrafanadir = ${pythondir}/graf_analysis
 pkggrafana_PYTHON = __init__.py \
 		grafanaAnalysis.py \
 		grafanaFormatter.py \
+		meanMetricBin.py \
 		meanMetricRate.py \
+		metricRateBin.py \
 		compMinMeanMax.py \
-		compMinMeanMaxRate.py \
 		rankMemByJob.py \
 		lustreData.py
