Support for pluggable format modules for grafana
time_series and table format modules included by default

--- a/graf_analysis/Makefile.am
+++ b/graf_analysis/Makefile.am
@@ -7,6 +7,8 @@ pkggrafanadir = ${pythondir}/graf_analysis
 pkggrafana_PYTHON = __init__.py \
 		grafanaAnalysis.py \
 		grafanaFormatter.py \
+		table_formatter.py \
+		time_series_formatter.py \
 		meanMetricRate.py \
 		metricRateBin.py \
 		compMinMeanMax.py \
