--- a/configure.ac
+++ b/configure.ac
@@ -21,7 +21,7 @@ AM_PATH_PYTHON(,,[:])
 NUMPY_INCLUDE_PATH=$($PYTHON -c "import numpy; print(numpy.get_include())")
 which cython >/dev/null 2>&1 || AC_MSG_ERROR("cython not found")
 test -n "$NUMPY_INCLUDE_PATH" || AC_MSG_ERROR("numpy not found.")
-AX_PYTHON_DEVEL()
+AX_PYTHON_DEVEL([>='3.6'])
 AC_MSG_RESULT([${NUMPY_INCLUDE_PATH}])
 AC_SUBST([NUMPY_INCLUDE_PATH])
 
