Add papi analysis modules
papiJobsTable - returns basic job info
papiJobStatTable - returns statistical summary of a given papi job for the given metric
papiMeanJobMetrics  - returns mean papi metrics across ranks for a given job
papiTimeseries - returns time series data for papi-events schema

--- a/graf_analysis/Makefile.am
+++ b/graf_analysis/Makefile.am
@@ -13,4 +13,8 @@ pkggrafana_PYTHON = __init__.py \
 		metricRateBin.py \
 		compMinMeanMax.py \
 		rankMemByJob.py \
-		lustreData.py
+		lustreData.py \
+		papiJobsTable.py \
+		papiJobStatTable.py \
+		papiMeanJobMetrics.py \
+		papiTimeseries.py
