Add metricRate to Makefile
fill NaN in metricRate calculation w/0

--- a/graf_analysis/Makefile.am
+++ b/graf_analysis/Makefile.am
@@ -9,7 +9,8 @@ pkggrafana_PYTHON = __init__.py \
 		grafanaFormatter.py \
 		table_formatter.py \
 		time_series_formatter.py \
-		meanMetricRate.py \
+		heatmap_formatter.py \
+		metricRate.py \
 		metricRateBin.py \
 		compMinMeanMax.py \
 		rankMemByJob.py \
